# terraphast-one

./: .clang-format  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: main.yml
app/: app.cpp
c_include/terraces/: terraces.h  terraces_old.h
c_lib/: terraces.cpp  terraces_old.cpp
cmake/: FindGMP.cmake
include/terraces/: advanced.hpp  bigint.hpp  bitmatrix.hpp  clamped_uint.hpp  constraints.hpp  errors.hpp  parser.hpp  rooting.hpp  simple.hpp  trees.hpp
lib/: advanced.cpp  bigint.cpp  bipartitions.cpp  bipartitions.hpp  bitmatrix.cpp  bits.hpp  bitvector.hpp  clamped_uint.cpp  constraints.cpp  errors.cpp  intrinsics.hpp  intrinsics_cl.cpp  intrinsics_gcc_clang.cpp  memory.hpp  multitree.cpp  multitree.hpp  multitree_impl.hpp  multitree_iterator.cpp  multitree_iterator.hpp  nodes.cpp  parser.cpp  ranked_bitvector.hpp  rooting.cpp  simple.cpp  small_bipartition.hpp  stack_allocator.hpp  subtree_extraction.cpp  subtree_extraction_impl.hpp  supertree_enumerator.hpp  supertree_helpers.cpp  supertree_helpers.hpp  supertree_variants.hpp  supertree_variants_debug.hpp  supertree_variants_multitree.hpp  trees.cpp  trees_impl.hpp  union_find.cpp  union_find.hpp  union_find_debug.hpp  utils.hpp  (+2 more)
lib/cl/: intrinsics.hpp
lib/gcc_clang/: intrinsics.hpp
lib/intel/: intrinsics.hpp
scripts/: build_appveyor.bat
test/: advanced.cpp  bipartitions.cpp  bitmatrix.cpp  bits.cpp  bitvector.cpp  c_api.cpp  c_api_gmp.cpp  clamped_uint.cpp  compile_test.cpp  constraints.cpp  fast_set.cpp  integration.cpp  limited.cpp  multitree_iterator.cpp  parser.cpp  rooting.cpp  simple.cpp  small_bipartition.cpp  stack_allocator.cpp  subtree_extraction.cpp  supertree.cpp  trees.cpp  union_find.cpp  util.cpp  validation.cpp  validation_utils.hpp
tools/: isomorphic.cpp  progress_app.cpp  reroot.cpp  subtree.cpp  tree_gen.cpp  validated_run.cpp  verbose_run.cpp
